# Roogle

./: .gitignore  Cargo.toml  LICENSE  README.md  analysis.py  benchmark.sh  benchmarkResults  benchmarkResultsLarger  testinput  testinput.txt
mapper/: Cargo.toml
mapper/src/: main.rs
master/: Cargo.toml
master/src/: main.rs  xmlhelper.rs
nlp/src/: lexer.rs  lib.rs
nlp/src/snowball/: among.rs  english.rs  mod.rs  porter.rs  snowball_env.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  mapper.rs  master.rs  reduce.rs
protocol/src/nonblocking/: mapper.rs  master.rs  mod.rs  protocol.rs  reduce.rs
reducer/: Cargo.toml
reducer/src/: main.rs
testing/src/: main.rs
