[package]
name = "master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
regex = "1.10.3"
crossbeam = "0.8.4"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
console-subscriber = "0.2.0"
async-channel = "2.1.1"
xml-rs = "0.8.19"

protocol = { path = "../protocol" }
